一部をコンポーネント化

--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -59,9 +59,9 @@ development:
   # Reference: https://webpack.js.org/configuration/dev-server/
   dev_server:
     https: false
-    host: localhost
-    port: 3035
-    public: localhost:3035
+    host: 'https://rails-vue-uosansatox.c9users.io/'
+    port: 8080
+    public: 'https://rails-vue-uosansatox.c9users.io/'
     hmr: false
     # Inline should be set to true if using HMR
     inline: true
