router導入。spaとして実装

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "vue": "^2.6.9",
     "vue-loader": "^15.7.0",
+    "vue-router": "^3.0.2",
     "vue-template-compiler": "^2.6.9"
   },
   "devDependencies": {
