change for heroku

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-sample",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@rails/webpacker": "^4.0.2",
     "axios": "^0.18.0",
